<?xml version='1.0' encoding='UTF-8'?>
<package format="3">
  <name>dynamixel_interfaces</name>
  <version>0.17.0</version>
  <description>TODO: Package description</description>
  <maintainer email="zerom@robotis.com">zerom</maintainer>
  <maintainer email="lsp@robotis.com">seongpung</maintainer>
  <license>ROBOTIS</license>
  <author email="hjkim@robotis.com">hjkim</author>
  <author email="yhna@robotis.com">yhna</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>action_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>builtin_interfaces</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>